[package]
name = "opensearch-repository-gcs"
version = "0.1.0"
edition = "2021"
description = "Rust GCS backend for OpenSearch tiered storage"
license = "Apache-2.0"
workspace = "../../../../../libs/dataformat-native/rust"

[lib]
crate-type = ["rlib"]

[dependencies]
object_store = { workspace = true, features = ["gcp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
native-bridge-common = { workspace = true }
