# SPDX-License-Identifier: Apache-2.0
#
# Vendored in-memory subset of liquid-cache DataFusion integration.
# Provenance: https://github.com/cocosz/liquid-cache branch lc-opensearch-df54-v2
# commit 8311bccc258756127adbebee3e54140b60fc09ba. See ../README.md.

[package]
name = "opensearch-liquid-cache-datafusion"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false
workspace = "../../../../../../libs/dataformat-native/rust"

[lib]
# Keep the upstream crate name so the integration keeps its
# `use liquid_cache_datafusion::...` paths. See ../README.md.
name = "liquid_cache_datafusion"
path = "src/lib.rs"

[dependencies]
ahash = { workspace = true }
arrow = { workspace = true }
arrow-schema = { workspace = true }
bytes = { workspace = true }
datafusion = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
object_store = { workspace = true }
parquet = { workspace = true }
tokio = { workspace = true }
opensearch-liquid-cache-core = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
